# cookiecutter-uv

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: main.yml  on-release-main.yml
cookiecutter_uv_plus/: cli.py
docs/: differences_with_upstream.md  index.md  tutorial.md
docs/features/: cicd.md  linting.md  publishing.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_cookiecutter.py  utils.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
